package roger;

message AccessToken {
	optional uint64 account_id = 1;
	optional uint64 scopes = 2;
	optional fixed32 created = 3;
	optional uint32 ttl = 4;
}

message RefreshToken {
	optional uint64 account_id = 1;
	optional uint64 scopes = 2;
}
